--- a/app.yaml
+++ b/app.yaml
@@ -14,3 +14,5 @@ handlers:
     script: auto
     secure: always
     login: admin
+
+entrypoint: java -jar target/microservicio-clientes-1.0-SNAPSHOT.jar
